--- a/index.html
+++ b/index.html
@@ -125,11 +125,27 @@
           <section>The "width" and "height" properties</section>
           <section>
             <pre>
-                <code class="language-html">   <canvas id="drawing" width="200" height="150"></canvas>
+                <code class="language-css">  
+                #drawing {
+                    width: 200px;
+                    height: 150px;
+                    margin: 10px;
+                    border: 4px solid #000;
+                    border-radius: 15px;
+                    background-color: #fff;
+                  }
+                  </canvas>
                   </code>
               </pre>
           </section>
-          <section><img src="./img/7png" alt="" /></section>
+          <section><img src="./img/6.png" alt="" /></section>
+          <section>
+            <pre>
+                  <code class="language-html">   <canvas id="drawing" width="400" height="300"></canvas>   </code>
+              </pre>
+          </section>
+          <section><img src="./img/7.png" alt="" /></section>
+
         </section>
       </div>
     </div>
